syntax = "proto3";
package incentives.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "incentives/v1/genesis.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/peggyjv/sommelier/v4/x/incentives/types";

// Query defines the gRPC query service for the cork module.
service Query {
    // QueryParams queries the allocation module parameters.
    rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
      option (google.api.http).get = "/sommelier/incentives/v1/params";
    }

}

// QueryParamsRequest is the request type for the Query/Params gRPC method.
message QueryParamsRequest {}

// QueryParamsRequest is the response type for the Query/Params gRPC method.
message QueryParamsResponse {
  // allocation parameters
  Params params = 1 [(gogoproto.nullable) = false];
}